--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,8 +3,8 @@
 <p>
 Impressum:
 Daniel Fliegauf
-Waldstraße 93
-76133 Karlsruhe
+Ipthausen Merklach 8
+97631 Bad Königshofen
 Germany
 daniel.fliegauf(at)gmail.com
 </p>
