--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -1,17 +1,32 @@
-<h1>Connectify Newsticker</h1>
-
+<div class="row">
+<div class="span9 offset1">
+<h1>Connectify Neuheiten</h1>
 <div class="newsitem">
-	<p class="lead newsheadline "><b>Navigationsleiste entrümpelt - 5. April 2013</b><p>
-	<p class="lead newstext">Die Navitgationsleiste und die Startseite (nach der Anmeldung) sieht jetzt etwas aufgeräumter aus. Als nächstes werden die "Profil"- und die "alle User"-Seiten bearbeitet. <p>
+    <p class="lead newsheadline "><b>Fixed Bug: User Group - 13. April 2013</b></p>
+    <p class="lead newstext">Es gibt nun kein Problem mehr mit invaliden Facebook-Tokens, so dass wieder auf alle User-Seiten zugegriffen werden kann. Schönes WE... :D</p>
 </div>
 
 <div class="newsitem">
-	<p class="lead newsheadline "><b>Facebook Nachrichten - 1. April 2013</b><p>
-	<p class="lead newstext">Kein Aprilscherz :) Facebook-Nachrichten an andere Connectify-Mitglieder können nun bequem direkt von Connectify aus geschickt werden - ohne die Umleitung auf die Facebook-Seite.<p>
+    <p class="lead newsheadline "><b>Besucherleiste eingefügt, Fehlerseite verbessert. - 12. April 2013</b></p>
+    <p class="lead newstext">Nun kannst du sehen, wer dein Profil besucht hat. Außerdem wurde die Fehlerseite angepasst. Sollte es zu einem Fehler kommen, habt ihr nun mehrere Möglichkeiten (Links) zur Auswahl, um diesen zu beheben.</p>
+</div>
+<div class="newsitem">
+    <p class="lead newsheadline "><b>Heimatstadt und Interessen hinzugefügt - 10. April 2013</b></p>
+    <p class="lead newstext">Deine eigene Profilseite sieht nun etwas aufgeräumter aus. Du kannst hier deine Heimatstadt und deine Interessen ändern. Neue Nutzer werden zudem aufgeforder eine Heimatstadt und Interessen anzuegeben.</p>
+</div>
+<div class="newsitem">
+	<p class="lead newsheadline "><b>Navigationsleiste entrümpelt - 5. April 2013</b></p>
+	<p class="lead newstext">Die Navigationsleiste und die Startseite (nach der Anmeldung) sieht jetzt etwas aufgeräumter aus. Als nächstes werden die "Profil"- und die "alle User"-Seiten bearbeitet. </p>
 </div>
 
 <div class="newsitem">
-	<p class="lead newsheadline "><b>Fixed Bug: Link Detail Error - 21. März 2013</b><p>
+	<p class="lead newsheadline "><b>Facebook Nachrichten - 1. April 2013</b></p>
+	<p class="lead newstext">Kein Aprilscherz :) Facebook-Nachrichten an andere Connectify-Mitglieder können nun bequem direkt von Connectify aus geschickt werden - ohne die Umleitung auf die Facebook-Seite.</p>
+</div>
+
+<div class="newsitem">
+	<p class="lead newsheadline "><b>Fixed Bug: Link Detail Error - 21. März 2013</b></p>
 	<p class="lead newstext">Nachdem ich meinen Masterarbeitsvortrag hinter mich gebracht habe, kann ich mich endlich wieder der Seite widmen :D => Der Detail-Link zu den Microposts funktioniert wieder.<br>
-		und jetzt: 6 Tage Urlaub ... endlich...<p>
+		und jetzt: 6 Tage Urlaub ... endlich...</p>
 </div>
+</div></div>
