--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,12 +18,11 @@
 		<% unless current_user?(@user) #Facebook Gruppentest%>
 				<% if @user.group == true && current_user.group == true %>
 					<%= link_to_function "Schreibe #{ @user.name.split[0] } über Facebook", "postToUser2( '#{@user.uid}', '#{current_user.name.split[0]}'); return false;", class: 'btn btn-warning', :target => '_blank' %><br><br>
-				<% else %>
-					<% if @group_current_user == true && @group_user != true %>
+			
+					<% elsif current_user.group == true && @user.group != true %>
 						<div class="sorry">Leider ist <%= @user.name.split[0] %> nicht in der Connectify-Facebookgruppe und kann daher nicht über Facebook erreicht werden :(</div><br>
 					<% else %>
 						<div class="sorry">Du bist nicht in der Connectify-Facebookgruppe und kannst daher <%= @user.name.split[0] %> nicht über Facebook schreiben. Klicke, um zu das zu <%= link_to "ändern", "http://facebook.com/groups/connectify", class: 'btn btn-mini', :target => '_blank' %></div><br>
-					<% end %>
 				<% end %>
 				<%= link_to "#{ @user.name.split[0] }'s Profil auf Facebook", "https://facebook.com/#{@user.uid}", class: 'btn btn-primary', :target => '_blank' %><br><br>
 				<%= link_to "Schreibe #{ @user.name.split[0] } eine eMail", "mailto:"+@user.email, class: 'btn btn-success', :target => '' %>
