--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,6 +11,7 @@ $blue: hsl(80, 100%, 90%);
 	box-sizing: border-box;
 }
 
+
 /* universal */
 html {
 overflow-y: scroll;
@@ -356,6 +357,21 @@ div[class=ui-select]:nth-child(5), div[class=ui-select]:nth-child(6){
 	display: none;
 }
 
+.imgdiv {
+	position: relative;
+}
+.imgtext {
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	color: white;
+	border: 1px solid rgba(37, 35, 35, 0.31);
+	padding: 0px 100% 0 3px;
+	background-color: rgba(12, 12, 12, 0.43);
+	border-radius: 2px;
+	box-shadow: 1px 1px 6px black;
+	display: none;
+}
 
 
 /* users index */
